--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,13 +1,25 @@
 version: '3'
 
 services:
-###> doctrine/doctrine-bundle ###
   database:
     ports:
-      - "5432"
-###< doctrine/doctrine-bundle ###
+      - "5432:5432"
+  ###> doctrine/doctrine-bundle ###
+  adminer:
+    image: michalhosna/adminer
+    ports:
+      - "8080:8080"
+    environment:
+      ADMINER_DB: app
+      ADMINER_DRIVER: pgsql
+      ADMINER_PASSWORD: SAE
+      ADMINER_SERVER: database
+      ADMINER_USERNAME: app
+      ADMINER_AUTOLOGIN: 1
+      ADMINER_NAME: sae5-01-back
 
-###> symfony/mailer ###
+  ###< doctrine/doctrine-bundle ###
+  ###> symfony/mailer ###
   mailer:
     image: schickling/mailcatcher
     ports: ["1025", "1080"]
