--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "doctrine/orm": "^2.16",
         "nelmio/cors-bundle": "^2.3",
         "phpdocumentor/reflection-docblock": "^5.3",
+        "phpoffice/phpspreadsheet": "^1.29",
         "phpstan/phpdoc-parser": "^1.23",
         "stof/doctrine-extensions-bundle": "^1.8",
         "symfony/asset": "6.3.*",
