addition of the excel_to_json route

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,3 +3,8 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+
+excel_to_json:
+    path: '/convert-excel-to-json'
+    controller: 'App\Controller\ExcelToJsonController::convertExcelToJson'
+    methods: ['POST']
