--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,10 @@
 ###< friendsofphp/php-cs-fixer ###
 
 /.idea/
+
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
