--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpoffice/phpspreadsheet": "^1.29",
         "phpstan/phpdoc-parser": "^1.23",
+        "shuchkin/simplexlsx": "^1.0",
         "stof/doctrine-extensions-bundle": "^1.8",
         "symfony/asset": "6.3.*",
         "symfony/console": "6.3.*",
