--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "react-modal": "^3.16.1",
         "wouter": "^2.11.0"
     }
 }
