--- a/package.json
+++ b/package.json
@@ -27,7 +27,12 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "@emotion/react": "^11.11.1",
+        "@emotion/styled": "^11.11.0",
+        "@mui/material": "^5.14.15",
+        "@mui/styled-engine-sc": "^6.0.0-alpha.3",
         "react-toastify": "^9.1.3",
+        "styled-components": "^6.1.0",
         "wouter": "^2.11.0"
     }
 }
