--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "@emotion/react": "^11.11.1",
+        "@emotion/styled": "^11.11.0",
+        "@mui/icons-material": "^5.14.15",
+        "@mui/material": "^5.14.15",
         "react-modal": "^3.16.1",
         "react-toastify": "^9.1.3",
         "wouter": "^2.11.0"
